name:                advent-of-code
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AdventOfCode
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , split
  default-language:    Haskell2010
  default-extensions:          OverloadedStrings
  other-modules:       Day1
                     , Day12
                     , Day13
                     , Day14
                     , Day15
                     , Day16
                     , Day17

executable advent-of-code-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent-of-code
  default-language:    Haskell2010

